--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,32 +1,84 @@
-/* Style the navbar */
-#navbar {
-    overflow: hidden;
-    background-color: #333;
+.navbar {
+    position: -webkit-sticky;
+    position: sticky;
+    display: flex;
+    justify-content: space-around;
+    z-index: 999;
+    top: 0px;
+    background-color: #fff;
+    border-bottom: 1px solid #ebebef;
+    padding: 20px 58px;
+    background-attachment: scroll !important;
   }
-  
-  /* Navbar links */
-  #navbar a {
+
+  .left-nav{
+    display: flex;
+    align-items: center;
+    -webkit-box-align: center;
+  }
+
+  .brand{
+    position: relative;
     float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px;
     text-decoration: none;
+    color: #333333;
   }
-  
-  /* Page content */
-  .content {
-    padding: 16px;
+
+  img {
+    display: inline-block;
+    vertical-align: middle;
+    max-width: 100%;
+    border:0;
+    overflow-clip-margin: content-box;
+    overflow: clip;
   }
-  
-  /* The sticky class is added to the navbar with JS when it reaches its scroll position */
-  .sticky {
-    position: fixed;
-    top: 0;
+
+  .nav-menu{
+    display: flex;
     width: 100%;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    grid-column-gap: 12px;
+  }
+
+  .right-nav{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 12px;
+    -webkit-box-pack: end;
+    -webkit-box-align: center;
   }
   
-  /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-  .sticky + .content {
-    padding-top: 60px;
+.nav-link {
+    padding: 10px 16px;
+    -webkit-box-align: center;
+    color: #3e404c;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 500;
+    white-space: nowrap;
+    letter-spacing: -0.02em;
+}
+
+.btn-primary {
+    padding: 10px 20px;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-box-pack: center;
+      background-color: #443fde;
+      transition: all 500ms cubic-bezier(0.6, 0.6, 0, 1);
+      color: #fff;
+      font-size: 14px;
+      line-height: 24px;
+      font-weight: 500;
+      text-align: center;
+      letter-spacing: -0.02em;
   }
+
+a {
+    background-color: transparent;
+    text-decoration: none;
+}
