--- a/css/login.css
+++ b/css/login.css
@@ -134,6 +134,25 @@ a {
     color: #fff;
 }
 
+h1 {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-family: 'Archivo', sans-serif;
+  font-size: 64px;
+  line-height: 1.2;
+  font-weight: 700;
+  letter-spacing: -0.03em;
+}
+
+.content-block {
+  display: flex;
+  height: 100%;
+  max-width: 450px;
+  max-height: 610px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .form-block{
     width: 100%;
     max-width: 480px;
