--- a/css/browse.css
+++ b/css/browse.css
@@ -69,6 +69,7 @@ p {
   width: 100%;
   max-width: 720px;
   padding: 14px;
+  background-color: #fff;
 }
 
 .input-wrapper {
@@ -92,6 +93,14 @@ p {
   outline: none;
   margin-left: 0.5rem;
   vertical-align: middle;
+  width: 100%;
+}
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
 }
 
 .search button {
@@ -108,6 +117,27 @@ p {
   border: none;
 }
 
-.search button:hover{
-    background-color: #3935b6;
+.search button:hover {
+  background-color: #3935b6;
+}
+
+.listar-jobs {
+  height: 500rem;
+  width: 100%;
+  padding: 2rem;
+  margin-top: -4.5rem;
+}
+
+.background-listar-jobs {
+  background-color: #f9f9fb;
+  padding: 9rem 25rem 5rem 25rem;
+  display: flex;
+}
+
+.background-listar-jobs>div>div:first-child{
+  
+}
+
+.background-listar-jobs>div>div:first-child p{
+  color: #443fde;
 }
