Estilizacao do butao

--- a/css/index.css
+++ b/css/index.css
@@ -61,23 +61,46 @@ main {
 	line-height: 1.5rem;
 	color: var(--color-GraySmoke);
 }
+form {
+	position: relative;
+}
 .search {
 	display: flex;
 	margin-top: 1rem;
-	position: relative;
+	font-size: 1.2rem;
 }
 .search i {
 	position: absolute;
+	top: 34%;
+	left: 4%;
+	color: #3e404c9f;
 }
 .search input[type="search"] {
-	width: 19rem;
-	height: 5rem;
+	color: #3e404ce7;
+	outline: none;
+	width: 29rem;
+	height: 4rem;
+	padding-left: 10%;
+	padding-top: 0.5%;
+	font-size: 0.9rem;
+	border: 1px solid #3e404c42;
+}
+.search input[type="search"]::placeholder {
+	color: #3e404c9f;
+	font-size: 14px;
+}
+.search input[type="search"]::-webkit-search-cancel-button {
+	display: none;
 }
 .search button {
+	position: absolute;
+	top: 7%;
+	left: 71.5%;
 	border: none;
 	background-color: var(--bg-BlueButton);
 	color: white;
-	padding: 0px 60px;
+	font-weight: bold;
+	padding: 19px 38px;
 }
 .right-side {
 	float: right;
