--- a/css/index.css
+++ b/css/index.css
@@ -17,16 +17,17 @@ body {
 main {
 	display: flex;
 	width: 80%;
-	/* height: 100%; */
+	height: 100%;
 	justify-content: center;
 	align-items: center;
 	margin: 0 auto;
-	gap: 1rem;
 }
 
 .left-side {
-	float: left;
-	width: 50%;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	width: 60vw;
 }
 .left-side .new {
 	display: flex;
@@ -55,19 +56,21 @@ main {
 .left-content {
 	width: 60%;
 	text-align: justify;
+	margin-bottom: 2rem;
 }
 .left-content p {
 	font-size: 1rem;
 	line-height: 1.5rem;
 	color: var(--color-GraySmoke);
 }
+
 form {
 	position: relative;
 }
 .search {
 	display: flex;
 	margin-top: 1rem;
-	font-size: 1.2rem;
+	font-size: 1.3rem;
 }
 .search i {
 	position: absolute;
@@ -103,8 +106,7 @@ form {
 	padding: 19px 38px;
 }
 .right-side {
-	float: right;
-	width: 50%;
+	width: 60vw;
 }
 .right-side img {
 	width: 80%;
