--- a/css/login.css
+++ b/css/login.css
@@ -87,7 +87,7 @@ img {
   background-color: #443fde;
   transition: all 500ms cubic-bezier(0.6, 0.6, 0, 1);
   color: #fff;
-  font-size: 14px;
+  font-size: 16.5px;
   line-height: 24px;
   font-weight: 500;
   text-align: center;
@@ -126,6 +126,7 @@ a {
 .right {
   display: flex;
   width: 50%;
+  height: 92.12vh;
   margin-left: auto;
   padding: 64px 5%;
   -webkit-box-orient: vertical;
@@ -219,6 +220,32 @@ p {
   text-decoration: none;
   cursor: pointer;
   border-radius: 0;
+}
+
+label{
+  display: block;
+  margin-bottom: 5px;
+  font-weight: 600;
+}
+
+.form-footer {
+  display: flex;
+  justify-content: flex-start;
+  grid-column-gap: 8px;
+  margin-top: 20px;
+  padding-top: 20px;
+  border-top: 1px solid #ebebef;
+}
+
+.form-footer a {
+  color: #443fde;
+  font-family: 'Inter', sans-serif;
+  font-size: 14px;
+}
+
+.text {
+  color: #606476;
+  line-height: 18px;
 }
 
 /* The sticky class is added to the navbar with JS when it reaches its scroll position */
