--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	overflow: hidden;
 }
 :root {
 	--color-GraySmoke: #3e404c;
@@ -16,7 +17,7 @@ body {
 }
 main {
 	display: flex;
-	width: 80%;
+	width: 65%;
 	height: 100%;
 	justify-content: center;
 	align-items: center;
@@ -109,9 +110,9 @@ form {
 	width: 60vw;
 }
 .right-side .image-height {
-	width: 80%;
-	height: 80vh;
+	width: 95%;
 }
 .right-side img {
-	width: 80%;
+	width: 100%;
+	height: 628px;
 }
