--- a/HireUP/web/css/index.css
+++ b/HireUP/web/css/index.css
@@ -39,6 +39,7 @@ main {
 	color: white;
 	font-size: 0.8rem;
 	font-weight: 600;
+	border-radius: 2px;
 	padding: 0.2rem 0.5rem;
 }
 .new p:last-of-type {
@@ -55,7 +56,7 @@ main {
 	letter-spacing: 0.1em;
 }
 .left-content {
-	width: 60%;
+	width: 80%;
 	text-align: justify;
 	margin-bottom: 2rem;
 }
@@ -105,6 +106,7 @@ form {
 	color: white;
 	font-weight: bold;
 	padding: 19px 38px;
+	border-radius: 2px;
 }
 .right-side {
 	width: 60vw;
