--- a/HireUP/web/css/browse.css
+++ b/HireUP/web/css/browse.css
@@ -123,10 +123,11 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 .listar-jobs {
-  height: 500rem;
+  height: 100%;
   width: 100%;
   padding: 2rem;
   margin-top: -4.5rem;
+  margin-bottom: 0;
 }
 
 .background-listar-jobs {
@@ -234,6 +235,7 @@ input[type="search"]::-webkit-search-results-decoration {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  height: 100%;
   width: 51rem;
 }
 
