--- a/HireUP/web/css/apply.css
+++ b/HireUP/web/css/apply.css
@@ -16,7 +16,66 @@ body {
 }
 main {
 	display: flex;
-	height: 100%;
+	/* height: 100%; */
 	justify-content: center;
 	align-items: center;
+}
+.left-side {
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	width: 50%;
+}
+.icon {
+	display: flex;
+	gap: 1rem;
+}
+.image {
+	padding: 5px;
+	box-shadow: 0 0 1px var(--color-GraySmoke);
+}
+.image-title {
+	display: flex;
+	flex-direction: column;
+	gap: 0.3rem;
+}
+.image-title p:first-of-type {
+	font-weight: bolder;
+	font-size: 1.5rem;
+}
+.image-title p:last-of-type {
+	font-size: 0.9rem;
+	color: var(--color-GraySmoke);
+}
+.location-info {
+	display: flex;
+	flex-direction: column;
+	gap: 0.4rem;
+}
+.location-info .location {
+	display: flex;
+	gap: 1rem;
+}
+.location p {
+	font-size: 0.9rem;
+	color: var(--color-GraySmoke);
+}
+.location .icon-location {
+	color: var(--bg-BlueMain);
+}
+.location .icon-dolar {
+	color: rgb(22, 165, 22);
+}
+.datails {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+.qualification ul,
+.about-job p {
+	margin-left: 5%;
+}
+.qualification ul li,
+.about-job p {
+	color: var(--color-GraySmoke);
 }
