--- a/HireUP/web/css/apply.css
+++ b/HireUP/web/css/apply.css
@@ -1,8 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400&family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500;1,600&display=swap");
+
+html,
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	scroll-behavior: smooth;
+	overflow-x: auto;
 }
 :root {
 	--color-GraySmoke: #3e404c;
@@ -16,7 +20,7 @@ body {
 }
 main {
 	display: flex;
-	/* height: 100%; */
+	height: 100%;
 	justify-content: center;
 	align-items: center;
 }
