--- a/HireUP/web/css/searchResults.css
+++ b/HireUP/web/css/searchResults.css
@@ -4,11 +4,20 @@
     box-sizing: border-box;
 }
 
+
+
+.search-title{
+    margin-top: 5rem;
+    margin-left: 5rem;
+    font-size: 2rem;
+}
+
+
 .search {
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-top: 5rem;
+    margin-left: 5rem;
+    margin-top: 1.5rem;
   }
   
   .search1 {
@@ -51,7 +60,7 @@
     display: none;
   }
   
-  .search button{
+  .search button, .card-ver-mais>form>button{
     padding: 10px 32px;
     background-color: #443fde;
     transition: all 500ms cubic-bezier(0.6, 0.6, 0, 1);
@@ -66,7 +75,123 @@
     border: none;
   }
   
-  .search button:hover{
+  .search button:hover, .card-ver-mais>form>button:hover{
     background-color: #3935b6;
   }
+
   
+  .right-filter{
+    padding-left:5rem;
+    padding-top: 6rem;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    min-height:45rem;
+    background-color: #f9f9fb;
+    margin-top: -2rem;
+  }
+  
+  .right-filter .top-right-filter h2{
+    margin-bottom: 0px;
+    font-size: 14px;
+    line-height: 1.6;
+    letter-spacing: -0.02em;
+    color: #030407;
+    text-align: center;
+  }
+  
+  .right-filter .mostrar-jobs{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-left: 1.5rem;
+  }
+  .right-filter .mostrar-jobs .card-jobs{
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    padding: 1rem;
+    width: 20rem;
+    margin-bottom: 5rem;
+  }
+  
+  .right-filter .mostrar-jobs .card-jobs div{
+    margin: 0.5rem 0;
+  }
+  
+  .right-filter .mostrar-jobs .card-jobs .card-top{
+    display: flex;
+    width: 100%;
+    align-items: center;
+  }
+  
+  .right-filter .mostrar-jobs .card-jobs .card-top div:first-child{
+    width: 3rem;
+    padding: 0.5rem;
+    background-color: #fff;
+    margin-right: 1rem;
+    border: 1px solid #ebebef;
+  }
+  .right-filter .mostrar-jobs .card-jobs .card-top span{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 16px;
+    line-height: 1.8;
+    font-weight: 500;
+    letter-spacing: -0.02em;
+    color: #030407;
+  }
+  
+  .right-filter .mostrar-jobs .card-jobs .card-middle{
+    width: 100%;
+    word-wrap: break-word;
+  }
+  
+  .right-filter .mostrar-jobs .card-jobs .card-middle span{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-family: Archivo, sans-serif;
+    font-size: 18px;
+    line-height: 1.3;
+    font-weight: 700;
+  }
+  
+  .right-filter .mostrar-jobs .card-jobs .card-category-and-type{
+    display: flex;
+  }
+  
+  .right-filter .mostrar-jobs .card-jobs .card-category-and-type div{
+    display: inline-block;
+    padding: 6px 12px;
+    background-color: #f3f3fc;
+    margin-right: 1rem;
+  }
+  
+  .right-filter .mostrar-jobs .card-jobs .card-category-and-type div:first-child{
+    color: #443fde;
+  }
+  
+  .right-filter .mostrar-jobs .card-jobs .card-category-and-type div:last-child{
+    color: #c98b40;
+  }
+  
+  .right-filter .mostrar-jobs .card-jobs .card-bottom{
+    display: flex;
+    color:#606476;
+    font-weight: 500;
+    letter-spacing: -0.03em;
+  }
+  
+  .right-filter .mostrar-jobs .card-jobs .card-bottom span{
+    color:#606476;
+    font-weight: 500;
+    letter-spacing: -0.03em;
+  }
+  .card-ver-mais{
+    display: flex;
+    margin-top: 2rem;
+    align-items: center;
+    justify-content:center ;
+  }
