--- a/HireUP/web/css/apply.css
+++ b/HireUP/web/css/apply.css
@@ -6,7 +6,6 @@ html,
 	padding: 0;
 	box-sizing: border-box;
 	scroll-behavior: smooth;
-	overflow-x: hidden;
 }
 :root {
 	--color-GraySmoke: #3e404c;
@@ -16,14 +15,18 @@ html,
 }
 body {
 	font-family: "Inter", sans-serif;
-	width: 100vw;
-	height: 100vh;
+	max-width: 100vw;
+	max-height: 100vh;
+	height: 100%;
 }
-main {
+main,
+form {
 	display: flex;
+	position: relative;
 	height: 100%;
 	justify-content: center;
 	align-items: center;
+	margin-top: 1%;
 }
 .left-side {
 	display: flex;
@@ -101,7 +104,13 @@ main {
 	gap: 1rem;
 }
 .pDetailsSub input {
+	outline: none;
 	width: 80%;
 	height: 3rem;
-	border: 2px solid var(--color-BorderWhite);
+	border: 1px solid var(--color-BorderWhite);
+	border-radius: 1px;
+	padding-left: 2%;
+}
+.pDetailsSub input:focus {
+	border: 1px solid var(--bg-BlueMain);
 }
