--- a/HireUP/web/css/login.css
+++ b/HireUP/web/css/login.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400&family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500;1,600&display=swap");
+
+
 * {
   box-sizing: border-box;
   margin: 0;
