--- a/HireUP/web/css/submitJob.css
+++ b/HireUP/web/css/submitJob.css
@@ -62,11 +62,14 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
+    border: solid red;
 }
 
 .cadastrar-form{
     background-color: #f9f9fb;
     padding: 5rem;
+    border: solid green;
+    width: 60rem;
 }
 
 .cadastrar-form .header-cadastrar{
@@ -102,6 +105,10 @@ p {
     margin-inline-end: 0px;
 }
 
+.cadastrar-form form{
+    margin-left: 5rem;
+}
+
 .cadastrar-form form div{
     display: flex;
     flex-direction: column;
@@ -110,7 +117,9 @@ p {
 .cadastrar-form form label{
     display: block;
     margin-bottom: 5px;
-    font-weight: 600;
+    font-size: 1.5rem;
+    color: #3e404c;
+    font-weight: 500;
     cursor: pointer;
     user-select: none;
     
@@ -123,6 +132,41 @@ p {
     border-style: solid;
     border-width: 1px;
     width: 100%;
+    font-size: 1rem;
     border-color: #ebebef;
 }
 
+select{
+    font-size: 1.2rem;
+}
+
+textarea{
+    border: 1px solid #ebebef;
+    padding: 12px;
+    margin-bottom: 24px;
+}
+
+.cadastrar-form form div button{
+    padding: 10px 32px;
+    background-color: #443fde;
+    transition: all 500ms cubic-bezier(0.6, 0.6, 0, 1);
+    color: #fff;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 500;
+    text-align: center;
+    letter-spacing: -0.02em;
+    text-transform: capitalize;
+    border: none;
+   margin-top: 2rem;
+}
+
+.cadastrar-form form div button:hover{
+    background-color: #3935b6;
+}
+
+*::placeholder{
+    font-size: 1rem;
+    color: #b1b3c0;
+}
