--- a/HireUP/web/css/browse.css
+++ b/HireUP/web/css/browse.css
@@ -327,9 +327,7 @@ input[type="search"]::-webkit-search-results-decoration {
 
 .right-filter .mostrar-jobs .card-jobs .card-bottom{
   display: flex;
-  color:#606476;
-  font-weight: 500;
-  letter-spacing: -0.03em;
+  flex-direction: column;
 }
 
 .right-filter .mostrar-jobs .card-jobs .card-bottom span{
