--- a/HireUP 2.0/web/Pages - Empresas/css/SignUp.css
+++ b/HireUP 2.0/web/Pages - Empresas/css/SignUp.css
@@ -1,95 +1,254 @@
-.register{
-    background: -webkit-linear-gradient(left, #3931af, #00c6ff);
-    margin-top: 3%;
-    padding: 3%;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400&family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500;1,600&display=swap");
+
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+	-webkit-font-smoothing: antialiased;
+	-webkit-text-size-adjust: 100%;
 }
-.register-left{
-    text-align: center;
-    color: #fff;
-    margin-top: 4%;
+
+body {
+	font-family: 'Inter', sans-serif;
+	font-size: 14px;
+	line-height: 1.2;
+	color: #030407;
 }
-.register-left input{
-    border: none;
-    border-radius: 1.5rem;
-    padding: 2%;
-    width: 60%;
-    background: #f8f9fa;
-    font-weight: bold;
-    color: #383d41;
-    margin-top: 30%;
-    margin-bottom: 3%;
-    cursor: pointer;
+
+
+
+.navbar {
+	position: -webkit-sticky;
+	position: sticky;
+	display: flex;
+	justify-content: space-around;
+	z-index: 999;
+	top: 0px;
+	background-color: #fff;
+	border-bottom: 1px solid #ebebef;
+	padding: 20px 58px;
+	background-attachment: scroll !important;
 }
-.register-right{
-    background: #f8f9fa;
-    border-top-left-radius: 10% 50%;
-    border-bottom-left-radius: 10% 50%;
+
+.left-nav {
+	display: flex;
+	align-items: center;
+	-webkit-box-align: center;
 }
-.register-left img{
-    margin-top: 15%;
-    margin-bottom: 5%;
-    width: 25%;
-    -webkit-animation: mover 2s infinite  alternate;
-    animation: mover 1s infinite  alternate;
+
+.brand {
+	position: relative;
+	float: left;
+	text-decoration: none;
+	color: #333333;
 }
-@-webkit-keyframes mover {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-20px); }
+
+img {
+	display: inline-block;
+	vertical-align: middle;
+	max-width: 100%;
+	border: 0;
+	overflow-clip-margin: content-box;
+	overflow: clip;
 }
-@keyframes mover {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-20px); }
+
+.nav-menu {
+	position: relative;
+	display: flex;
+	width: 100%;
+	-webkit-box-pack: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	align-items: center;
+	grid-column-gap: 12px;
 }
-.register-left p{
-    font-weight: lighter;
-    padding: 12%;
-    margin-top: -9%;
+
+.right-nav {
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	gap: 12px;
+	-webkit-box-pack: end;
+	-webkit-box-align: center;
 }
-.register .register-form{
-    padding: 10%;
-    margin-top: 10%;
+
+.nav-link {
+	padding: 10px 16px;
+	-webkit-box-align: center;
+	color: #3e404c;
+	font-size: 14px;
+	line-height: 24px;
+	font-weight: 500;
+	white-space: nowrap;
+	letter-spacing: -0.02em;
 }
-.btnRegister{
-    float: right;
-    margin-top: 10%;
-    border: none;
-    border-radius: 1.5rem;
-    padding: 2%;
-    background: #0062cc;
-    color: #fff;
-    font-weight: 600;
-    width: 50%;
-    cursor: pointer;
+
+.btn-primary {
+	padding: 10px 20px;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	-webkit-box-pack: center;
+	background-color: #0AB248;
+	transition: all 500ms cubic-bezier(0.6, 0.6, 0, 1);
+	color: #fff;
+	font-size: 16.5px;
+	line-height: 24px;
+	font-weight: 500;
+	text-align: center;
+	letter-spacing: -0.02em;
+	border: 0;
+	margin: 0;
+	text-decoration: none;
+	cursor: pointer;
+	border-radius: 0;
 }
-.register .nav-tabs{
-    margin-top: 3%;
-    border: none;
-    background: #0062cc;
-    border-radius: 1.5rem;
-    width: 28%;
-    float: right;
+
+a {
+	background-color: transparent;
+	text-decoration: none;
 }
-.register .nav-tabs .nav-link{
-    padding: 2%;
-    height: 34px;
-    font-weight: 600;
-    color: #fff;
-    border-top-right-radius: 1.5rem;
-    border-bottom-right-radius: 1.5rem;
+
+.content {
+	display: flex;
+	height: 100%;
+	max-width: 100%;
+	min-height: 90vh;
+	margin-left: 0;
+	margin-right: 0;
+	flex-direction: row;
 }
-.register .nav-tabs .nav-link:hover{
-    border: none;
+
+.left {
+	display: flex;
+	width: 50%;
+	align-items: center;
+	padding-right: 3%;
+	padding-left: 5%;
+	-webkit-box-align: center;
 }
-.register .nav-tabs .nav-link.active{
-    width: 100px;
-    color: #0062cc;
-    border: 2px solid #0062cc;
-    border-top-left-radius: 1.5rem;
-    border-bottom-left-radius: 1.5rem;
+
+.right {
+	display: flex;
+	width: 50%;
+	height: 92.12vh;
+	margin-left: auto;
+	padding: 64px 5%;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	flex-direction: column;
+	-webkit-box-pack: center;
+	justify-content: center;
+	background-image: url("../img/Desk1.svg");
+	background-position: 170px 300px;
+	background-size: 50%;
+    background-repeat: no-repeat;
 }
-.register-heading{
-    text-align: center;
-    margin-top: 8%;
-    margin-bottom: -15%;
-    color: #495057;
+
+h1 {
+	margin-top: 0;
+	margin-bottom: 0;
+	font-family: 'Archivo', sans-serif;
+	font-size: 64px;
+	line-height: 1.2;
+	font-weight: 700;
+	letter-spacing: -0.03em;
 }
+
+.content-block {
+	display: flex;
+	height: 100%;
+	max-width: 450px;
+	max-height: 610px;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.form-block {
+	width: 100%;
+	max-width: 480px;
+	margin-left: auto;
+	position: relative;
+	margin-bottom: 0px;
+}
+
+.form-title {
+	margin-bottom: 48px;
+	border-style: none;
+	text-align: left;
+}
+
+input,
+button {
+	font: inherit;
+}
+
+h3 {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	font-family: 'Archivo', sans-serif;
+	font-size: 40px;
+	line-height: 1.2;
+	font-weight: 700;
+	letter-spacing: -0.03em;
+}
+
+p {
+	margin-bottom: 0px;
+	color: #3e404c;
+	font-size: 16px;
+	line-height: 32px;
+}
+
+label {
+	display: block;
+	margin-bottom: 5px;
+	font-weight: 600;
+}
+
+.form-field {
+	height: 48px;
+	margin-bottom: 24px;
+	padding: 12px;
+	border: 1px solid #ebebef;
+}
+
+.w-input {
+	display: block;
+	width: 100%;
+	font-size: 14px;
+	line-height: 1.443;
+	color: #333333;
+	background-color: #ffffff;
+	border: 1px solid #cccccc;
+}
+
+.w-button {
+	width: 100%;
+	display: inline-block;
+	border: 0;
+	margin: 0;
+	text-decoration: none;
+	cursor: pointer;
+	border-radius: 0;
+}
+
+.form-footer {
+	display: flex;
+	justify-content: flex-start;
+	grid-column-gap: 8px;
+	margin-top: 20px;
+	padding-top: 20px;
+	border-top: 1px solid #ebebef;
+}
+
+.form-footer a {
+	color: #0AB248;
+	font-family: 'Inter', sans-serif;
+	font-size: 14px;
+}
+
+.text {
+	color: #606476;
+	line-height: 18px;
+}
+
