--- a/HireUP 2.0/web/Perfil da Empresa/style.css
+++ b/HireUP 2.0/web/Perfil da Empresa/style.css
@@ -117,3 +117,9 @@ body {}
     font-weight: 600;
     color: #0062cc;
 }
+
+/* Desccricao da empresa */
+.content-Empresa {
+    width: 100%;
+    border: 2px solid rgba(128, 128, 128, 0.205);
+}
