--- a/HireUP 2.0/web/Pages - Empresas/css/SignUp.css
+++ b/HireUP 2.0/web/Pages - Empresas/css/SignUp.css
@@ -145,20 +145,27 @@ a {
 }
 
 h1 {
-	margin-top: 0;
-	margin-bottom: 0;
-	font-family: 'Archivo', sans-serif;
-	font-size: 64px;
-	line-height: 1.2;
-	font-weight: 700;
-	letter-spacing: -0.03em;
+	margin-top: 65px;
+    margin-bottom: 0;
+    font-family: 'Archivo', sans-serif;
+    font-size: 64px;
+    line-height: 1.2;
+    font-weight: 700;
+    letter-spacing: -0.03em;
+}
+
+.quote{
+    display: block;
+    margin-bottom: 120px;
+    text-align: center;
+
 }
 
 .content-block {
 	display: flex;
 	height: 100%;
-	max-width: 450px;
-	max-height: 610px;
+	max-width: 680px;
+	/* max-height: 610px; */
 	flex-direction: column;
 	justify-content: space-between;
 }
@@ -178,7 +185,7 @@ h1 {
 }
 
 input,
-button {
+button, textarea {
 	font: inherit;
 }
 
@@ -220,6 +227,13 @@ label {
 	color: #333333;
 	background-color: #ffffff;
 	border: 1px solid #cccccc;
+}
+
+#text{
+    background-color: #ffffff;
+	border: 1px solid #cccccc;
+    margin-bottom: 24px;
+	padding: 5px;
 }
 
 .w-button {
