--- a/HireUP 2.0/web/css/signup.css
+++ b/HireUP 2.0/web/css/signup.css
@@ -18,8 +18,6 @@ body {
 
 
 .navbar {
-	position: -webkit-sticky;
-	position: sticky;
 	display: flex;
 	justify-content: space-around;
 	z-index: 999;
@@ -130,7 +128,6 @@ a {
 .right {
 	display: flex;
 	width: 50%;
-	height: 92.12vh;
 	margin-left: auto;
 	padding: 64px 5%;
 	-webkit-box-orient: vertical;
@@ -138,10 +135,10 @@ a {
 	flex-direction: column;
 	-webkit-box-pack: center;
 	justify-content: center;
-	background-image: url("../img/login.svg");
-	background-position: 0px 0px;
-	background-size: cover;
-	color: #fff;
+	background-image: url("../img/banner-img.png");
+	background-position: 200px 220px;
+	background-size: 510px;
+	background-repeat: no-repeat;
 }
 
 h1 {
