--- a/HireUP 2.0/web/css/browse.css
+++ b/HireUP 2.0/web/css/browse.css
@@ -287,7 +287,7 @@ input[type="search"]::-webkit-search-results-decoration {
   margin-bottom: 0px;
   font-size: 16px;
   line-height: 1.8;
-  font-weight: 500;
+  font-weight: bold;
   letter-spacing: -0.02em;
   color: #030407;
 }
@@ -295,6 +295,8 @@ input[type="search"]::-webkit-search-results-decoration {
 .right-filter .mostrar-jobs .card-jobs .card-middle{
   width: 100%;
   word-wrap: break-word;
+  display: flex;
+  flex-direction: column;
 }
 
 .right-filter .mostrar-jobs .card-jobs .card-middle span{
