--- a/HireUP 2.0/web/Comentarios/Css/style.css
+++ b/HireUP 2.0/web/Comentarios/Css/style.css
@@ -1,80 +1,93 @@
+/*Esse código está podre porrraaaaaaaaaaaaaaaaaaaa, desorganizado e difícil de entender, why? nunca pensei que voltaria a tocar então foda-se*/
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: rgba(189, 182, 182, 0.13);
 }
 
-.tabComentarios {
-	display: flex;
-	max-height: 55rem;
-	width: 40%;
-	margin: 0 auto;
-	overflow: auto;
-	resize: none;
-	outline: none;
-	border: none;
+[data-componet="comentList"] {
+    display: flex;
+    max-height: 55rem;
+    width: 40%;
+    margin: 0 23rem;
+    overflow-wrap: anywhere;
+    resize: none;
+    outline: none;
+    border: none;
 }
 .tabComentar {
-	position: fixed;
-	bottom: 1%;
-	left: 30%;
+    position: fixed;
+    bottom: 1%;
+    left: 30%;
 }
+
 #inpComentario {
-	outline: none;
-	padding: 5px;
-	overflow: auto;
-	resize: none;
-	width: 48rem;
-	font-size: 1rem;
-	height: 14rem;
-	background-color: #f2f2f2;
-	border: 1px solid gray;
-	border-radius: 10px;
+    z-index: 1;
+    outline: none;
+    padding: 10px;
+    overflow: auto;
+    resize: none;
+    width: 48rem;
+    font-size: 1rem;
+    height: 14rem;
+    background-color: #f2f2f2;
+    border: 1px solid gray;
+    border-radius: 10px;
+    position: relative;
+    left: -24%;
 }
 #inpComentario:focus {
-	background-color: white;
+    background-color: white;
 }
 #inpSubmit {
-	position: absolute;
-	border: none;
-	background-color: rgba(0, 0, 255, 0.616);
-	padding: 1rem 2rem;
-	color: white;
-	left: 104%;
-	top: 78%;
-	border-radius: 15%;
+    position: absolute;
+    border: none;
+    background-color: rgba(0, 0, 255, 0.616);
+    padding: 1rem 2rem;
+    color: white;
+    left: 80%;
+    top: 73%;
+    border-radius: 15%;
 }
 #HideShow {
-	position: absolute;
-	left: 26%;
-	top: 94%;
-	color: white;
-	border: none;
-	background-color: transparent;
-	padding: 0.5rem 1rem;
-	font-size: 1.2rem;
-	background-color: rgba(0, 0, 255, 0.616);
-	border-radius: 25%;
+    position: fixed;
+    left: 16%;
+    top: 93%;
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    font-size: 1.2rem;
+    background-color: rgba(0, 0, 255, 0.616);
+    border-radius: 25%;
 }
 .comentario {
-	position: relative;
-	width: auto;
-	height: auto;
-	background-color: #f2f2f2;
-	padding: 1rem;
-	margin: 1rem;
-	border-radius: 1rem;
+    position: relative;
+    width: auto;
+    height: auto;
+    background-color: #f2f2f2;
+    padding: 1rem;
+    margin: 1rem;
+    border-radius: 1rem;
 }
 #hideComent {
-	position: absolute;
-	right: 3%;
-	font-size: 15px;
+    position: absolute;
+    right: 3%;
+    font-size: 15px;
 }
 .comentarioHeader h1 {
-	font-size: 18px;
-	margin-right: 5%;
+    font-size: 18px;
+    margin-right: 5%;
 }
 .author {
-	border-bottom: 1px solid gray;
-	margin-bottom: 1px;
+    border-bottom: 1px solid gray;
+    margin-bottom: 1px;
+}
+.imagem {
+    position: fixed;
+    right: 3%;
+    top: 20%;
+    width: 33%;
 }
