--- a/HireUP 2.0/web/Pages - Empresas/css/empregos.css
+++ b/HireUP 2.0/web/Pages - Empresas/css/empregos.css
@@ -120,7 +120,8 @@ body {
 .card {
   max-width: 320px;
   border-radius: 1rem;
-  background-color: #f1eeee;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+  background-color: #fff5f5dd;
   padding: 1rem;
   box-shadow: inset;
 }
